wip:inpl features
todo  1..delete item

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "tsc": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "dayjs": "^1.11.3",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
